--- a/zxcvbn.cabal
+++ b/zxcvbn.cabal
@@ -9,13 +9,33 @@ Author:             Luke Taylor
 Build-Type:         Simple
 Cabal-Version:      >= 1.8
 
+Library
+  Exposed-modules:  Zxcvbn, Entropy
+  Extensions:       DoAndIfThenElse
+
+  Build-Depends:    base >= 3,
+                    containers >= 0.4
+  --Other-modules:    Entropy
 
 Executable zxcvbn
   Main-is:          Main.hs
-
-
-  Extensions:       DoAndIfThenElse
-  
-  Build-Depends:    base >= 3,
+  Build-depends:    zxcvbn,
+                    base >= 3,
                     containers >= 0.4
-                    
+
+
+Test-suite tests
+  Type:            exitcode-stdio-1.0
+  Build-depends:   
+                   zxcvbn,
+                   base >= 4 && < 5,
+                   HUnit >= 1.2 && < 2,
+                   QuickCheck >= 2.4,
+                   test-framework >= 0.4.1,
+                   test-framework-quickcheck2,
+                   test-framework-hunit,
+                   test-framework-th
+  Ghc-options:     -Wall -rtsopts
+  Hs-source-dirs:  tests
+  Main-is:         QC.hs
+
