--- a/zxcvbn.cabal
+++ b/zxcvbn.cabal
@@ -7,35 +7,41 @@ Description:
   Mainly a playground for me to try out Haskell for now.
 Author:             Luke Taylor
 Build-Type:         Simple
-Cabal-Version:      >= 1.8
+Cabal-Version:      >= 1.12
 
 Library
-  Exposed-modules:  Zxcvbn, Entropy
-  Extensions:       DoAndIfThenElse
+  Default-Language:  Haskell2010
+  Exposed-modules:  Zxcvbn, Entropy, Token
+  Other-Extensions: DoAndIfThenElse
 
-  Build-Depends:    base >= 3,
-                    containers >= 0.4
+  Build-Depends:    base >= 4,
+                    containers >= 0.4,
+                    vector >= 0.10
+
   --Other-modules:    Entropy
 
 Executable zxcvbn
+  Default-Language:  Haskell2010
   Main-is:          Main.hs
   Build-depends:    zxcvbn,
-                    base >= 3,
-                    containers >= 0.4
-
+                    base >= 4,
+                    containers >= 0.4,
+                    vector >= 0.10
 
 Test-suite tests
+  Default-Language:  Haskell2010
   Type:            exitcode-stdio-1.0
-  Build-depends:   
-                   zxcvbn,
-                   base >= 4 && < 5,
+  Other-Modules:   ZxcvbnSpec
+  Build-depends:   zxcvbn,
+                   base >= 4,
                    HUnit >= 1.2 && < 2,
-                   QuickCheck >= 2.4,
-                   test-framework >= 0.4.1,
-                   test-framework-quickcheck2,
-                   test-framework-hunit,
-                   test-framework-th
-  Ghc-options:     -Wall -rtsopts
+                   hspec >= 1.5,
+                   tasty >= 0.4.1,
+                   tasty-smallcheck >= 0.2,
+                   tasty-hunit >= 0.4,
+                   smallcheck >= 1.1,
+                   vector >= 0.10
+  Ghc-options:     -Wall -rtsopts -fno-warn-missing-signatures
   Hs-source-dirs:  tests
-  Main-is:         QC.hs
+  Main-is:         tests.hs
 
