--- a/zxcvbn.cabal
+++ b/zxcvbn.cabal
@@ -14,32 +14,33 @@ Library
   Exposed-modules:  Zxcvbn, Entropy, Token
   Other-Extensions: DoAndIfThenElse
 
-  Build-Depends:    base >= 4,
-                    containers >= 0.4,
-                    vector >= 0.10
+  Build-Depends:     base >= 4
+                   , containers >= 0.4
+                   , text >= 0.11
 
   -- Other-modules:    Entropy
 
 Executable zxcvbn
   Default-Language:  Haskell2010
-  Main-is:          Main.hs
-  Build-depends:    zxcvbn,
-                    base >= 4,
-                    containers >= 0.4,
-                    vector >= 0.10
+  Main-is:           Main.hs
+  Build-depends:     zxcvbn
+                   , base >= 4
+                   , text
+                   , containers
+                   --, vector >= 0.10
 
 Test-suite tests
   Default-Language:  Haskell2010
-  Type:            exitcode-stdio-1.0
-  Build-depends:   zxcvbn,
-                   base >= 4,
-                   HUnit >= 1.2 && < 2,
-                   hspec >= 1.5,
-                   tasty >= 0.4.1,
-                   tasty-smallcheck >= 0.2,
-                   tasty-hunit >= 0.4,
-                   smallcheck >= 1.1,
-                   vector >= 0.10
+  Type:              exitcode-stdio-1.0
+  Build-depends:     zxcvbn
+                   , base >= 4
+                   , HUnit >= 1.2 && < 2
+                   --, hspec >= 1.5
+                   , tasty >= 0.4.1
+                   , tasty-smallcheck >= 0.2
+                   , tasty-hunit >= 0.4
+                   , smallcheck >= 1.1
+                   , vector >= 0.1
   Ghc-options:     -Wall -rtsopts -fno-warn-missing-signatures
   Hs-source-dirs:  tests
   Main-is:         tests.hs
