Add spatial matching for keyboard layouts
Similar to the original zxcvbn, but also implement the layout parsing
function which builds the adjacency lookup graph. The original project
has a python script to do this.

--- a/zxcvbn.cabal
+++ b/zxcvbn.cabal
@@ -13,6 +13,7 @@ Library
   Default-Language:  Haskell2010
   Exposed-modules:   Zxcvbn
                    , Entropy
+                   , Adjacency
   Other-modules:     Types
   Other-Extensions:  DoAndIfThenElse
 
